--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="Hello, I'm 志成zhi_cheng. Welcome to my homepage.">
 	<meta name="author" content="志成zhi_cheng">
 	<title>志成's Home</title>
-	<link id="favicon" rel="icon" href="https://tva1.sinaimg.cn/large/008qLT8ggy1h6q69154tij30ku0lbtl1.jpg">
+	<link id="favicon" rel="icon" href="https://img.gejiba.com/images/539302e7ed0aeefb9620cc6c4b8bc841.jpg">
 	<!--https://tvax3.sinaimg.cn/large/006MpbfMgy1gva3w6r52jj61sk1u14qp02.jpg-->
 	<link rel="stylesheet" href="./css/home.css">
 	<link
