--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						</div>
 
 						<div class="box-content" id="projectsの">
-							<div class="box-item"><a href="https://blog.zhicheng233.ml/Project" target="_blank">Project Link</a></div>
+							<div class="box-item"><a href="https://blog.zhicheng233.ml/project" target="_blank">Project Link</a></div>
 							<!-- <div class="box-item"><a href="https://blog.imlazy.ink:233/" target="_blank">Lazy's Blog</a>
 							</div>
 							<div class="box-item"><a href="https://api.imlazy.ink" target="_blank">雫 API</a></div>
