--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<meta name="keywords" content="志成zhi_cheng,zhi_cheng233,志成zhi_cheng's Home,志成home,ZChome,home,志成的主页">
 	<meta name="description" content="Hello, I'm 志成zhi_cheng. Welcome to my homepage.">
 	<meta name="author" content="志成zhi_cheng">
-	<title>志成's Home</title>
+	<title>志成zhi_cheng's Home</title>
 	<link id="favicon" rel="icon" href="https://img.gejiba.com/images/539302e7ed0aeefb9620cc6c4b8bc841.jpg">
-	<!--https://tvax3.sinaimg.cn/large/006MpbfMgy1gva3w6r52jj61sk1u14qp02.jpg-->
+	<!--https://img.gejiba.com/images/539302e7ed0aeefb9620cc6c4b8bc841.jpg-->
 	<link rel="stylesheet" href="./css/home.css">
 	<link
 		href="https://font.sec.miui.com/font/css?family=MiSans:400,500,600,700:Chinese_Simplify,Latin,Chinese_Traditional&amp;display=swap"
