--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<div class="box-content" id="homeの">
 							<p>Hello, I'm <span id="hi"></span></p>
 							<p>Age: 16</p>
-							<p>Date of birth: 12-08(Lunar calendar)</p>
+							<p>Date of birth: 12-08</p>
 							<p>E-mail: <a href="mailto:2473367376@qq.com">2473367376@qq.com</a></p>
 							<p>Contact me: <a href="http://wpa.qq.com/msgrd?v=3&uin=2473367376&site=qq&menu=yes"
 									target="_blank">QQ</a> | <a href="https://space.bilibili.com/350354944"
