--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<div class="box-content" id="blogの">
 							<div id="blogs" style="display: inline-grid;">
 								<!-- <p>加载不出？试试访问：<a href="https://blog.zhicheng233.ml" target="_blank">https://blog.zhicheng233.ml</a></p> -->
-								<p>抱歉该Hexo主题暂不支持SSR，请访问：<a href="https://blog.zhicheng233.ml" target="_blank">https://blog.zhicheng233.ml</a></p>
+								<p>抱歉,该Hexo主题暂不支持RSS，请访问：<a href="https://blog.zhicheng233.ml" target="_blank">https://blog.zhicheng233.ml</a></p>
 							</div>
 						</div>
 
