--- a/index.html
+++ b/index.html
@@ -18,9 +18,20 @@
 		rel="stylesheet">
 	<link href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/css/bootstrap-grid.min.css"
 		type="text/css" rel="stylesheet" />
+	<link href="https://cdn.bootcss.com/aplayer/1.10.1/APlayer.min.css" rel="stylesheet">
+	<script src="https://cdn.bootcss.com/aplayer/1.10.1/APlayer.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/meting@2.0.1/dist/Meting.min.js"></script>
 </head>
 
 <body>
+	<meting-js
+    server="netease"
+	type="playlist"
+	autoplay="true"
+	fixed="true"
+	mutex="false"
+	id="7576464272">
+	</meting-js>
 	<div class="bg"></div>
 	<div class="container">
 		<div class="main-box">
