修改播放方法为随机播放

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 	autoplay="true"
 	fixed="true"
 	mutex="false"
+	order="random"
 	id="7576464272">
 	</meting-js>
+
 	<div class="bg"></div>
 	<div class="container">
 		<div class="main-box">
