--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="row">
 				<div class="col-md-3">
 					<div class="box-left">
-						<img src="https://img.gejiba.com/images/539302e7ed0aeefb9620cc6c4b8bc841.jpg" alt="Avatar"
+						<img src="https://i.postimg.cc/K8KXxgTQ/image.jpg" alt="Avatar"
 							title="不可以rua！">
 						<h2>志成zhi_cheng</h2>
 					</div>
