--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="Hello, I'm 志成zhi_cheng. Welcome to my homepage.">
 	<meta name="author" content="志成zhi_cheng">
 	<title>志成zhi_cheng's Home</title>
-	<link id="favicon" rel="icon" href="https://img.gejiba.com/images/539302e7ed0aeefb9620cc6c4b8bc841.jpg">
+	<link id="favicon" rel="icon" href="https://i.ibb.co/6sY6MDt/image.jpg">
 	<!--https://img.gejiba.com/images/539302e7ed0aeefb9620cc6c4b8bc841.jpg-->
 	<link rel="stylesheet" href="./css/home.css">
 	<link
@@ -24,23 +24,26 @@
 </head>
 
 <body>
+	
 	<meting-js
-    server="netease"
+	server="netease"
 	type="playlist"
 	autoplay="true"
 	fixed="true"
-	mutex="false"
 	order="random"
+	mutex="false"
 	id="7576464272">
+
 	</meting-js>
 
+	
 	<div class="bg"></div>
 	<div class="container">
 		<div class="main-box">
 			<div class="row">
 				<div class="col-md-3">
 					<div class="box-left">
-						<img src="https://i.postimg.cc/K8KXxgTQ/image.jpg" alt="Avatar"
+						<img src="https://i.ibb.co/6sY6MDt/image.jpg" alt="Avatar"
 							title="不可以rua！">
 						<h2>志成zhi_cheng</h2>
 					</div>
