--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="Hello, I'm 志成zhi_cheng. Welcome to my homepage.">
 	<meta name="author" content="志成zhi_cheng">
 	<title>志成zhi_cheng's Home</title>
-	<link id="favicon" rel="icon" href="https://ibb.co/SvNqjVm">
+	<link id="favicon" rel="icon" href="https://blog.zhicheng233.ml/image/ZCLOGO.jpg">
 	<!--https://img.gejiba.com/images/539302e7ed0aeefb9620cc6c4b8bc841.jpg-->
 	<link rel="stylesheet" href="./css/home.css">
 	<link
@@ -43,7 +43,7 @@
 			<div class="row">
 				<div class="col-md-3">
 					<div class="box-left">
-						<img src="https://ibb.co/SvNqjVm" alt="Avatar"
+						<img src="https://blog.zhicheng233.ml/image/ZCLOGO.jpg" alt="Avatar"
 							title="不可以rua！">
 						<h2>志成zhi_cheng</h2>
 					</div>
