--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<a href="javascript:goProjects();">Projects</a>
 							</li>
 							<li class="nav-item">
-								<a href="https://api.imlazy.ink" target="_blank">Lazy's API</a>
+								<a href="./jszt/2023.1.25.jpg" target="_blank">精神状态</a>
 							</li>
 						</ul>
 						<div class="box-content" id="homeの">
