--- a/Donate/index.html
+++ b/Donate/index.html
@@ -84,7 +84,7 @@
 		<div class="images">
 			<img src="./QQ.png" alt="QQ收款二维码">
 			<img src="./WX.png" alt="微信收款二维码(TODO)">
-			<img src="./AL.png" alt="支付宝收款二维码(TODO)">
+			<img src="./AL.jpg" alt="支付宝收款二维码(TODO)">
 		</div>
 		<p class="address">USDT：TODO</p>
 	</div>
