support USDT TRC20

--- a/Donate/index.html
+++ b/Donate/index.html
@@ -83,10 +83,10 @@
 		<h1>捐赠支持</h1>
 		<div class="images">
 			<img src="./QQ.png" alt="QQ收款二维码">
-			<img src="./WX.png" alt="微信收款二维码(TODO)">
-			<img src="./AL.jpg" alt="支付宝收款二维码(TODO)">
+			<img src="./WX.png" alt="微信收款二维码">
+			<img src="./AL.jpg" alt="支付宝收款二维码">
 		</div>
-		<p class="address">USDT：TODO</p>
+		<p class="address">USDT TRC20：TFQr9h8qDcku3gdj4Axq96bCCgHA87Up9r</p>
 	</div>
 
 
