New domain back

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="Hello, I'm 志成zhi_cheng. Welcome to my homepage.">
 	<meta name="author" content="志成zhi_cheng">
 	<title>志成zhi_cheng's Home</title>
-	<link id="favicon" rel="icon" href="https://blog.zhicheng233.ml/image/ZCLOGO.jpg">
+	<link id="favicon" rel="icon" href="https://zhicheng233.top/image/ZCLOGO.jpg">
 	<!--https://img.gejiba.com/images/539302e7ed0aeefb9620cc6c4b8bc841.jpg-->
 	<link rel="stylesheet" href="./css/home.css">
 	<link
@@ -43,7 +43,7 @@
 			<div class="row">
 				<div class="col-md-3">
 					<div class="box-left">
-						<img src="https://blog.zhicheng233.ml/image/ZCLOGO.jpg" alt="Avatar"
+						<img src="https://blog.zhicheng233.top/image/ZCLOGO.jpg" alt="Avatar"
 							title="不可以rua！">
 						<h2>志成zhi_cheng</h2>
 					</div>
@@ -62,31 +62,31 @@
 								<a href="javascript:goProjects();">Projects</a>
 							</li>
 							<li class="nav-item">
-								<a href="./jszt/2023.1.25.jpg" target="_blank">精神状态</a>
+								<a href="./Donate" target="_blank">Donate</a>
 							</li>
 						</ul>
 						<div class="box-content" id="homeの">
 							<p>Hello, I'm <span id="hi"></span></p>
-							<p>Age: 16</p>
+							<p>Age: 17</p>
 							<p>Date of birth: 12-08</p>
-							<p>E-mail: <a href="mailto:2473367376@qq.com">2473367376@qq.com</a></p>
+							<p>E-mail: <a href="mailto:mczhicheng@outlook.com">mczhicheng@outlook.com</a></p>
 							<p>Contact me: <a href="http://wpa.qq.com/msgrd?v=3&uin=2473367376&site=qq&menu=yes"
 									target="_blank">QQ</a> | <a href="https://space.bilibili.com/350354944"
 									target="_blank">bilibili</a> | <a href="https://github.com/zhicheng233"
 									target="_blank">Github</a> [<a href="https://github.com/LazyCreeper/LightPage"
 									target="_blank" style="color: #858585;">This Project</a>]</p>
-							<p>Copyright &copy; 2022 zhi_cheng233 all right reserved</p>
+							<p>Copyright &copy; 2023 zhi_cheng233 all right reserved</p>
 						</div>
 
 						<div class="box-content" id="blogの">
 							<div id="blogs" style="display: inline-grid;">
-								<!-- <p>加载不出？试试访问：<a href="https://blog.zhicheng233.ml" target="_blank">https://blog.zhicheng233.ml</a></p> -->
-								<p>抱歉,该Hexo主题暂不支持RSS，请访问：<a href="https://blog.zhicheng233.ml" target="_blank">https://blog.zhicheng233.ml</a></p>
+								<!-- <p>加载不出？试试访问：<a href="https://zhicheng233.top" target="_blank">https://zhicheng233.top</a></p> -->
+								<p>抱歉,该Hexo主题暂不支持RSS，请访问：<a href="https://blog.zhicheng233.top" target="_blank">https://blog.zhicheng233.top</a></p>
 							</div>
 						</div>
 
 						<div class="box-content" id="projectsの">
-							<div class="box-item"><a href="https://blog.zhicheng233.ml/project" target="_blank">Project Link</a></div>
+							<div class="box-item"><a href="https://blog.zhicheng233.top/project" target="_blank">Project Link</a></div>
 							<!-- <div class="box-item"><a href="https://blog.imlazy.ink:233/" target="_blank">Lazy's Blog</a>
 							</div>
 							<div class="box-item"><a href="https://api.imlazy.ink" target="_blank">雫 API</a></div>
