add & fix something
fix blog rss
add 萌ICP备案

--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@
 									target="_blank">bilibili</a> | <a href="https://github.com/zhicheng233"
 									target="_blank">Github</a> [<a href="https://github.com/LazyCreeper/LightPage"
 									target="_blank" style="color: #858585;">This Project</a>]</p>
-							<p>Copyright &copy; 2023 zhi_cheng233 all right reserved</p>
+							<p>Copyright &copy; 2024 zhi_cheng233 all right reserved</p>
+							<p><a href="https://icp.gov.moe/?keyword=20241208" target="_blank ">萌ICP备20241208号</a></p>
 						</div>
 
 						<div class="box-content" id="blogの">
 							<div id="blogs" style="display: inline-grid;">
-								<!-- <p>加载不出？试试访问：<a href="https://zhicheng233.top" target="_blank">https://zhicheng233.top</a></p> -->
-								<p>抱歉,该Hexo主题暂不支持RSS，请访问：<a href="https://blog.zhicheng233.top" target="_blank">https://blog.zhicheng233.top</a></p>
+								<p>加载不出？试试访问：<a href="https://zhicheng233.top" target="_blank">https://zhicheng233.top</a></p>
+								<!-- <p>抱歉,该Hexo主题暂不支持RSS，请访问：<a href="https://blog.zhicheng233.top" target="_blank">https://blog.zhicheng233.top</a></p> -->
 							</div>
 						</div>
 
@@ -119,6 +120,6 @@
 		$("#projectsの").hide();
 	</script>
 	<script src="./js/home.js" type="application/javascript"></script>
+	
 </body>
-
 </html>
