--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 						<div class="box-content" id="blogの">
 							<div id="blogs" style="display: inline-grid;">
-								<p>加载不出？试试访问：<a href="https://zhicheng233.top" target="_blank">https://zhicheng233.top</a></p>
+								<p>加载不出？试试访问：<a href="https://blog.zhicheng233.top" target="_blank">https://blog.zhicheng233.top</a></p>
 								<!-- <p>抱歉,该Hexo主题暂不支持RSS，请访问：<a href="https://blog.zhicheng233.top" target="_blank">https://blog.zhicheng233.top</a></p> -->
 							</div>
 						</div>
