u know I ws lazy (

--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
 									target="_blank">Github</a> [<a href="https://github.com/LazyCreeper/LightPage"
 									target="_blank" style="color: #858585;">This Project</a>]</p>
 							<p>Copyright &copy; 2024 zhi_cheng233 all right reserved</p>
-							<p><a href="https://icp.gov.moe/?keyword=20241208" target="_blank ">萌ICP备20241208号</a></p>
+							<p>
+								<a href="https://icp.gov.moe/?keyword=20241208" target="_blank ">
+									<img style="width:20px;height:20px;margin-bottom:-4px" src="https://moe.one/view/img/ico64.png"/>萌ICP备20241208号
+								</a>
+							</p>
 						</div>
 
 						<div class="box-content" id="blogの">
@@ -88,20 +92,7 @@
 
 						<div class="box-content" id="projectsの">
 							<div class="box-item"><a href="https://blog.zhicheng233.top/project" target="_blank">Project Link</a></div>
-							<!-- <div class="box-item"><a href="https://blog.imlazy.ink:233/" target="_blank">Lazy's Blog</a>
-							</div>
-							<div class="box-item"><a href="https://api.imlazy.ink" target="_blank">雫 API</a></div>
-							<div class="box-item"><a href="https://mcsm.imlazy.ink" target="_blank">MCSManager 文档</a>
-							</div>
-							<div class="box-item"><a href="https://live.lazy.ink" target="_blank">Lazy's Live</a></div>
-							<div class="box-item"><a href="https://blog.imlazy.ink:233/index.php/archives/335/"
-									target="_blank">MCSM9 Vivid主题</a></div>
-							<div class="box-item"><a href="https://blog.imlazy.ink:233/index.php/archives/253/"
-									target="_blank">MCSM9 二次元主题</a></div>
-							<div class="box-item"><a href="https://blog.imlazy.ink:233/index.php/archives/38/"
-									target="_blank">宝塔面板二次元主题</a></div>
-							<div class="box-item"><a href="https:///blog.imlazy.ink:233/index.php/archives/382/"
-									target="_blank">宝塔面板 Vivid主题</a></div> -->
+							
 						</div> 
 					</div>
 				</div>
