--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		type="application/javascript"></script>
 	<script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/js/bootstrap.min.js"
 		type="application/javascript"></script>
-	<script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/typed.js/2.0.12/typed.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"
 		type="application/javascript"></script>
 	<script>
 		$("#blogの").hide();
@@ -113,4 +113,5 @@
 	<script src="./js/home.js" type="application/javascript"></script>
 	
 </body>
+
 </html>
