--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 	<link
 		href="https://font.sec.miui.com/font/css?family=MiSans:400,500,600,700:Chinese_Simplify,Latin,Chinese_Traditional&amp;display=swap"
 		rel="stylesheet">
-	<link href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/css/bootstrap-grid.min.css"
-		type="text/css" rel="stylesheet" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/css/bootstrap-grid.rtl.min.css" type="text/css"
+		rel="stylesheet" />
 	<link href="https://cdn.bootcss.com/aplayer/1.10.1/APlayer.min.css" rel="stylesheet">
 	<script src="https://cdn.bootcss.com/aplayer/1.10.1/APlayer.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/meting@2.0.1/dist/Meting.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -67,15 +68,16 @@
 						</ul>
 						<div class="box-content" id="homeの">
 							<p>Hello, I'm <span id="hi"></span></p>
-							<p>Age: 17</p>
+							<p>Age: 18</p>
 							<p>Date of birth: 12-08</p>
 							<p>E-mail: <a href="mailto:mczhicheng@outlook.com">mczhicheng@outlook.com</a></p>
-							<p>Contact me: <a href="http://wpa.qq.com/msgrd?v=3&uin=2473367376&site=qq&menu=yes"
+							<p>Contact me: <a href="http://wpa.qq.com/msgrd?v=3&uin=3665203425&site=qq&menu=yes"
 									target="_blank">QQ</a> | <a href="https://space.bilibili.com/350354944"
 									target="_blank">bilibili</a> | <a href="https://github.com/zhicheng233"
+									traget="_blank">Telegram</a> | <a href="https://t.me/zhi_cheng233"
 									target="_blank">Github</a> [<a href="https://github.com/LazyCreeper/LightPage"
 									target="_blank" style="color: #858585;">This Project</a>]</p>
-							<p>Copyright &copy; 2024 zhi_cheng233 all right reserved</p>
+							<p>Copyright &copy; 2025 zhi_cheng233 all right reserved</p>
 							<p>
 								<a href="https://icp.gov.moe/?keyword=20241208" target="_blank ">
 									<img style="width:20px;height:20px;margin-bottom:-4px" src="https://moe.one/view/img/ico64.png"/>萌ICP备20241208号
@@ -85,14 +87,15 @@
 
 						<div class="box-content" id="blogの">
 							<div id="blogs" style="display: inline-grid;">
-								<p>加载不出？试试访问：<a href="https://blog.zhicheng233.top" target="_blank">https://blog.zhicheng233.top</a></p>
-								<!-- <p>抱歉,该Hexo主题暂不支持RSS，请访问：<a href="https://blog.zhicheng233.top" target="_blank">https://blog.zhicheng233.top</a></p> -->
+								<p>加载不出？试试访问：<a href="https://zhicheng233.top" target="_blank">https://zhicheng233.top</a></p>
 							</div>
 						</div>
 
 						<div class="box-content" id="projectsの">
-							<div class="box-item"><a href="https://blog.zhicheng233.top/project" target="_blank">Project Link</a></div>
-							
+							<div class="box-item"><a href="https://sdgb-tech.zhicheng233.top/" target="_blank">SDGB发券科技</a></div>
+							<div class="box-item"><a href="https://github.com/ohdj/NfcAimeReader/" target="_blank">NfcAimeReader</a></div>
+							<div class="box-item"><a href="https://github.com/zhicheng233/SGMOD/" target="_blank">SDMOD</a></div>
+							<div class="box-item"><a href="https://mikunet.top/" target="_blank">MikuNET</a></div>
 						</div> 
 					</div>
 				</div>
@@ -100,11 +103,10 @@
 		</div>
 	</div>
 
-	<script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.6.0/jquery.min.js"
+	<script src="https://unpkg.com/vue@3.2.31/dist/vue.global.prod.js" type="application/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
 		type="application/javascript"></script>
-	<script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/js/bootstrap.min.js"
-		type="application/javascript"></script>
-	<script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/typed.js/2.0.12/typed.min.js"
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"
 		type="application/javascript"></script>
 	<script>
 		$("#blogの").hide();
